=======================================
 Release notes for PyTables 3.1 series
=======================================

:Author: PyTables Developers
:Contact: pytables@googlemail.com

.. py:currentmodule:: tables


Changes from 3.1.1 to 3.1.2
===========================

Improvements
------------

- The internal Blosc_ library has been updated to version 1.4.0.
  It includes a couple of security fixes and support for architectures
  requiring strict access alignment.
- The :func:`print_versions` function now also reports the version of
  compression libraries used by blosc
- Now the :file:`setup.py` tries to use the '-march=native' C flag by
  default. In falls back on '-msse2' if '-march=native' is not supported
  by the compiler. Closes :issue:`379`.
- Fixed a spurious unicode comparison warning (closes :issue:`372` and
  :issue:`373`).
- Improved handling of empty string attributes. In previous versions of
  PyTables empty string were stored as scalar HDF5 attributes having size 1
  and value '\0' (an empty null terminated string).
  Now empty string are stored as HDF5 attributes having zero size 
- Added a new cookbook recipe and a couple of examples for simple threading
  with PyTables.


Bugs fixed
----------

- Fixed compatibility problems with numpy 1.9 and 1.10-dev
  (closes :issue:`362` and :issue:`366`)
- Fixed support for unicode node names in LRU cache (only Python 2 was
  affected). Closes :issue:`367` and :issue:`369`.
- Fixed support for unicode node titles (only Python 2 was affected).
  Closes :issue:`370` and :issue:`374`.
- Fixed a bug that caused the silent truncation of unicode attributes
  containing the '\0' character. Closes :issue:`371'.
- Fixed :func:`descr_from_dtype` to work as expected with complex types.
  Closes :issue:`381`.
- Fixed the :class:`tests.test_basics.ThreadingTestCase` test case.
  Closes :issue:`359`.


Changes from 3.1.0 to 3.1.1
===========================

Bugs fixed
----------
