@@ -14,6 +14,9 @@ Changes from 3.1.1 to 3.1.2
 Improvements
 ------------
 
+- Now :program:`ptrepack` recognizes hardlinks and replicates them in the
+  output (*repacked*) file. This saves disk space and makes repacked files
+  more conformal to the original one. Closes :issue:`380`.
 - The internal Blosc_ library has been updated to version 1.4.0.
   It includes a couple of security fixes and support for architectures
   requiring strict access alignment.
